# ravioli

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  instagram_integration.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  discovery.yml  feature_request.yml  refactoring.yml
.github/workflows/: ci.yml
docs/: README.md
prompts/: DESIGN.md  antigravity.md  data_transformation.md
scratch/: migrate_pii.py  pii_test.csv
src/: instagram_integration.py
src/components/: UserInterface.js
src/jimwurst/: cli.py
src/jimwurst/core/: callbacks.py  config.py  dbt.py
src/jimwurst/db/: session.py
src/jimwurst/ingestion/: apple_health.py  base.py  linkedin.py  misc.py  spotify.py  substack.py
src/ravioli/: cli.py
src/ravioli/ai/: Kowalski.py
src/ravioli/ai/agents/: Kowalski.md  Kowalski.py  sql_agent.py
src/ravioli/ai/skills/: analysis.py  communication.py  skills.md
src/ravioli/ai/templates/: quick_insight_template.md
src/ravioli/ai/tools/: __init__.py  operations.py  sql.py  visualization.py
src/ravioli/backend/: main.py
src/ravioli/backend/cli/: app.py
src/ravioli/backend/core/: callbacks.py  config.py  database.py  dbt.py  encryption.py  models.py  ollama.py  schemas.py
src/ravioli/backend/data/: pii_scanner.py  wfs_client.py
src/ravioli/backend/ingestion/: apple_health.py  base.py  linkedin.py  misc.py  spotify.py  substack.py
src/ravioli/backend/scripts/: backfill_hashes.py  rename_tables.py
src/ravioli/core/: dbt.py
src/ravioli/db/: session.py
src/ravioli/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/ravioli/frontend/src/: App.css  App.tsx  index.css  main.ts  postcss.test.ts  store.test.ts  store.ts  style.css
src/ravioli/frontend/tests/: formatters.test.ts  syntax.test.ts
src/ravioli/ingestion/: apple_health.py  base.py  linkedin.py  misc.py  spotify.py  substack.py
src/ui/: feedback_form.py
src/ui_components/: style.css
tests/: README.md
tests/ravioli/ai/: test_kowalski.py  test_skills_analysis.py  test_skills_communication.py  test_sql_agent_connectivity.py  test_sql_agent_logic.py  test_tool_operations.py  test_tool_sql_agent_logic.py  test_tool_visualization.py
tests/ravioli/backend/: conftest.py  test_models.py
tests/ravioli/frontend/: Data.test.ts  Insights.test.ts  Knowledge.test.ts  Settings.test.ts  Sidebar.test.ts  formatters.test.ts  postcss.test.ts  store.test.ts  syntax.test.ts
(+68 files in other folders)
