[project]
name = "ravioli"
version = "0.1.0"
description = "AI-native, Notebook-style personal DWH for business-friendly vibe-analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "dbt-core>=1.8.0",
    "dbt-postgres>=1.8.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "lxml>=6.1.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "openpyxl>=3.1.0",
    "requests>=2.33.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]


[project.scripts]
ravioli = "ravioli.backend.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ravioli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
]

[tool.uv]
managed = true
